[gd_scene load_steps=16 format=3 uid="uid://5tyf7dlnm3e"]

[ext_resource type="Script" uid="uid://d13p8xdy1req0" path="res://Scenes & Scripts/ufo.gd" id="1_2is6a"]
[ext_resource type="Texture2D" uid="uid://5r7l0c7ht7bg" path="res://Assets/Sprites/laser.png" id="2_2is6a"]
[ext_resource type="Texture2D" uid="uid://dv008rsexmhxd" path="res://Assets/Sprites/alien/Alien1.png" id="3_5hdx5"]
[ext_resource type="Texture2D" uid="uid://c0yoiglxqtxe8" path="res://Assets/Sprites/alien/Alien2.png" id="4_a8sig"]
[ext_resource type="Texture2D" uid="uid://44icv0wvr5iw" path="res://Assets/Sprites/alien/Alien3.png" id="5_r4rev"]
[ext_resource type="AudioStream" uid="uid://b7g5wd7eqvfqn" path="res://Audio/SFX/laserShoot.wav" id="6_gc7dw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gc7dw"]
size = Vector2(36, 186)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbddl"]
atlas = ExtResource("3_5hdx5")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxgfh"]
atlas = ExtResource("4_a8sig")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pxyvt"]
atlas = ExtResource("5_r4rev")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hdrwh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbddl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxgfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pxyvt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_l762c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("laser_hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8o21h"]
resource_name = "zap"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("laser_hitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iwyla"]
_data = {
&"RESET": SubResource("Animation_l762c"),
&"zap": SubResource("Animation_8o21h")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2is6a"]
size = Vector2(16, 16)

[node name="ufo" type="Node2D"]
script = ExtResource("1_2is6a")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 6)
scale = Vector2(0.485, 0.94)
texture = ExtResource("2_2is6a")
offset = Vector2(0, 100)

[node name="laser_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="laser_hitbox"]
position = Vector2(0, 101)
shape = SubResource("RectangleShape2D_gc7dw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_hdrwh")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.482067

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_iwyla")
}

[node name="bounce" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="position_reset" type="Timer" parent="."]
wait_time = 3.0

[node name="ufo_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ufo_hitbox"]
shape = SubResource("RectangleShape2D_2is6a")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_gc7dw")

[connection signal="body_entered" from="laser_hitbox" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="bounce" to="." method="_on_bounce_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="position_reset" to="." method="_on_position_reset_timeout"]
[connection signal="body_entered" from="ufo_hitbox" to="." method="_on_ufo_hitbox_body_entered"]
